--- a/templates/places.xml
+++ b/templates/places.xml
@@ -62,11 +62,11 @@
                <place xml:id="{{ x.hsl_id }}">
                   {% if x.place_type_class %}
                   <settlement type="{{ x.place_type_class }}">
-                     <placeName type="main">{{ x.name }}</placeName>
+                     <placeName type="main">{{ x.ortsname }}</placeName>
                   </settlement>
                   <desc type="entity_type">{{ x.place_type }}</desc>
                   {% else %}
-                  <placeName type="main">{{ x.name }}</placeName>
+                  <placeName type="main">{{ x.ortsname }}</placeName>
                   {% endif %}
                   {% if x.alternative_schreibweise is string and x.alternative_schreibweise|length > 0 %}
                   <placeName type="alternative">{{ x.alternative_schreibweise }}</placeName>
