update linked data in tables

--- a/templates/bibl.xml
+++ b/templates/bibl.xml
@@ -60,13 +60,17 @@
          {% for x in objects %}
             <bibl xml:id="{{ x.hsl_id }}">
                <title type="main">{{ x.name }}</title>
-               {% if x.alternativen is string and x.alternativen|length > 0 %}
-               <title type="alternative">{{ x.alternativen }}</title>
-               {% endif %}
                {% if x.komponist_autor is string %}
                <author ref="#">
                   <persName>{{ x.komponist_autor }}</persName>
                </author>
+               {% endif %}
+               {% if x.schoepfer %}
+               {% for s in x.schoepfer if s.data %}
+               <author ref="#{{ s.data.hsl_id }}">
+                  <persName>{{ s.data.name }}</persName>
+               </author>
+               {% endfor %}
                {% endif %}
             </bibl>
          {% endfor %}
