--- a/templates/places.xml
+++ b/templates/places.xml
@@ -63,10 +63,12 @@
                   {% if x.place_type_class %}
                   <settlement type="{{ x.place_type_class }}">
                      <placeName type="main">{{ x.ortsname }}</placeName>
+                     <placeName type="alternative">{{ x.Alternativname }}</placeName>
                   </settlement>
                   <desc type="entity_type">{{ x.place_type }}</desc>
                   {% else %}
                   <placeName type="main">{{ x.ortsname }}</placeName>
+                  <placeName type="alternative">{{ x.Alternativname }}</placeName>
                   {% endif %}
                   {% if x.country %}
                   <country>{{ x.country_code }}, {{ x.country }}</country>
