if cond for alt-title and alt-name

--- a/templates/bibl.xml
+++ b/templates/bibl.xml
@@ -60,7 +60,9 @@
          {% for x in objects %}
             <bibl xml:id="{{ x.hsl_id }}">
                <title type="main">{{ x.name }}</title>
+               {% if x.Alternativtitel %}
                <title type="alternative">{{ x.Alternativtitel }}</title>
+               {% endif %}
                {% if x.schoepfer %}
                {% for s in x.schoepfer if s.data %}
                <author ref="#{{ s.data.hsl_id }}">
