--- a/templates/bibl.xml
+++ b/templates/bibl.xml
@@ -76,7 +76,7 @@
                {% endfor %}
                {% endif %}
                {% if x.gnd|length != 0 %}
-               <idno type="GND">{{ x.gnd }}</idno>
+               <idno type="URI" subtype="GND">{{ x.gnd }}</idno>
                {% endif %}
             </bibl>
          {% endfor %}
