--- a/templates/bibl.xml
+++ b/templates/bibl.xml
@@ -5,7 +5,7 @@
             <title type="main">Werkregister der Hanslick Edition</title>
             <respStmt>
                <resp>Lektorat</resp>
-               <name>Wilfing, Alexander</name>
+               <name xml:id="awilfinger">Wilfing, Alexander</name>
                <name>Bamer, Katharina</name>
                <name>Pfiel, Anna</name>
             </respStmt>
@@ -58,7 +58,7 @@
       <body>
          <listBibl>
          {% for x in objects %}
-            <bibl xml:id="{{ x.hsl_id }}">
+            <bibl xml:id="{{ x.hsl_id }}" resp="#awilfinger" cert="{% if x.Ueberprueft %}high{% else %}low{% endif %}">
                <title type="main">{{ x.name }}</title>
                {% if x.Alternativtitel %}
                <title type="alternative">{{ x.Alternativtitel }}</title>
