--- a/templates/places.xml
+++ b/templates/places.xml
@@ -59,7 +59,7 @@
          <div type="index_places">
             <listPlace xml:id="listplace">
             {% for x in objects %}
-               <place xml:id="{{ x.hsl_id }}" resp="#awilfing" cert="{% if x.Ueberprueft %}medium{% else %}low{% endif %}">
+               <place xml:id="{{ x.hsl_id }}" resp="#awilfing" cert="{% if x.Ueberprueft %}high{% else %}medium{% endif %}">
                   {% if x.place_type_class %}
                   <settlement type="{{ x.place_type_class }}">
                      <placeName type="main">{{ x.ortsname }}</placeName>
