adding logic to handle digitalisat #https://github.com/Hanslick-Online/hsl-app/issues/58

--- a/templates/bibl.xml
+++ b/templates/bibl.xml
@@ -78,6 +78,11 @@
                {% if x.gnd|length != 0 %}
                <idno type="URI" subtype="GND">{{ x.gnd }}</idno>
                {% endif %}
+               {% if x.Digitalisat|length != 0 %}
+               {% for d in x.Digitalisat|split_string(" , ") %}
+               <idno type="URL" subtype="Digitalisat">{{ d }}</idno>
+               {% endfor %}
+               {% endif %}
             </bibl>
          {% endfor %}
       </listBibl>
