--- a/templates/bibl.xml
+++ b/templates/bibl.xml
@@ -78,7 +78,7 @@
                {% if x.gnd|length != 0 %}
                <idno type="URI" subtype="GND">{{ x.gnd }}</idno>
                {% endif %}
-               {% if x.Digitalisat|length != 0 %}
+               {% if x.Digitalisat and x.Digitalisat|length != 0 %}
                {% for d in x.Digitalisat|split_string(" , ") %}
                <idno type="URL" subtype="Digitalisat">{{ d }}</idno>
                {% endfor %}
