--- a/templates/bibl.xml
+++ b/templates/bibl.xml
@@ -63,6 +63,13 @@
                {% if x.Alternativtitel %}
                <title type="alternative">{{ x.Alternativtitel }}</title>
                {% endif %}
+               {% if x.Werkbezug and x.Werkbezug|length != 0 %}
+               <noteGrp type="Werkbezug">
+                  {% for w in x.Werkbezug %}
+                  <note type="Werkbezug" target="hsl_work_id_{{ w.id }}">{{ w.value }}</note>
+                  {% endfor %}
+               </noteGrp>
+               {% endif %}
                {% if x.schoepfer %}
                {% for s in x.schoepfer if s.data %}
                <author ref="#{{ s.data.hsl_id }}">
